...
          android:textAlignment="center"
          android:textColor="@android:color/black"
          android:textSize="30sp" />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/email_login"
          android:inputType="textEmailAddress"
          android:hint="@string/email_main"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:layout_marginTop="20dp"
          android:background="@android:drawable/edit_text"/>
      <EditText
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/password_login"
          android:inputType="textPassword"
          android:hint="@string/password"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:layout_marginTop="20dp"
          android:background="@android:drawable/edit_text"/>

      <Button
          android:id="@+id/btn_login"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginStart="20dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="20dp"
          android:background="#4CAF50"
...
              android:layout_marginTop="20dp"
              >
              <TextView
                  android:layout_marginStart="20dp"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/forget_main"
                  android:text="@string/forgot_your_password_main"
                  />
          </LinearLayout>
      </LinearLayout>

</FrameLayout>
