...
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_marginTop="35dp"
         android:weightSum="3">
         <EditText
             android:id="@+id/verificationEdit"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="2"
             android:hint="@string/code_main"
             android:inputType="number"
             android:layout_marginStart="30dp"
             android:background="@android:drawable/edit_text"
             />

         <Button
             android:id="@+id/verify"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="30dp"
             android:layout_weight="1"
             android:background="#4CAF50"
...
             android:gravity="end"
             android:textAlignment="gravity"/>
         <TextView
             android:layout_width="100dp"
             android:layout_marginEnd="30dp"
             android:layout_height="match_parent"
             android:id="@+id/resendVerification"
             android:textColor="@color/link_color"
             android:text="@string/re_send_main"
             android:gravity="center"
             android:textAlignment="gravity"/>
     </LinearLayout>
 </LinearLayout>
...
